updates to bio, quizzly spacing issues and footer nav for user guide

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -162,8 +162,10 @@ body {
     color: $white; }
     h2, .bio span.project-type {
       color: $white; }
-    img {
-      height: 50%; } 
+    .bio img {
+      display: block;
+      max-width: 60%;
+      margin: 0 auto; } 
     a.btn {
       margin-right: 1rem; }
 
@@ -205,9 +207,10 @@ body {
   text-align: center; }
 
 .create-question {
-  background-color: $warning;
-  .create-question img {
-  border-radius: 7px; } }
+  background-color: $warning; }
+
+.create-question img {
+  border-radius: 7px; }
 
 /* ==== Project > Solstice ==== */
 .section.solstice { 
